--- a/content/resources/17-125f07.md
+++ b/content/resources/17-125f07.md
@@ -8,8 +8,8 @@ file_size: 56801
 file_type: image/jpeg
 image_metadata:
   caption: This course examines various monetary topics, from global finance and the
-    developing world to financial crises and crime. (Image courtesy of {{% resource_link
-    "27b1a5c9-6308-4ab8-b73b-666bd5a0ab9b" "David Wahl" %}}. Used with permission.)
+    developing world to financial crises and crime. (Image courtesy of [David Wahl](http://www.creativecreativity.com/).
+    Used with permission.)
   credit: ''
   image-alt: 'Origami: dollar bills folded up in the shape of full suit.'
 learning_resource_types: []
